allnew colors and some little tweaks

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #e6e6e6;
+    background-color: #c6ced4;
     margin: 0;
     padding: 0;
     display: flex;
@@ -15,7 +15,7 @@ body {
 .container {
     background-color: #ffffff;
     border-radius: 15px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.8);
     padding: 20px;
     max-width: 400px;
     width: 90%;
